# dev_harness

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTORS  LICENSE  README.md  agent_runner.py  conftest.py  plan.md  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: harness-ci.yml
.harness/journal/: agent__optimise_query_layer__20260617T062706Z.json
.harness/leases/: optimise_query_layer.json
docs/: API_SCHEMA.md  IMPLEMENTATION.md
example/docs/: IMPLEMENTATION.md
example/tests/: test_payments.py
harness/: README.md  __init__.py  __main__.py  agent_runner.py  ci_enforce.py  command_guard.py  contract_manifest.py  enforce_contract_binding.py  enforce_file_locks.py  forensic.py  git_blob.py  hook_context.py  journal.py  leases.py  ledger.py  lock_policy.py  log_condenser.py  okf.py  prompt_builder.py  runner_cli.py  runner_containment.py  runner_core.py  runner_drive.py  runner_llm.py  runner_reconcile.py  runner_recovery.py  runner_states.py  staleness.py  state_sync.py  telemetry.py  validate_agents_ledger.py  validate_okf.py
harness/docs/: containment-and-diagnostics.md  coordination.md  ledger-and-locks.md  llm-seam.md  okf-and-contracts.md  overview.md  setup-and-usage.md  testing-and-design.md
harness/example/: AGENTS.example.md
harness/example/docs/: API_SCHEMA.md  IMPLEMENTATION.md  index.md  log.md
harness/example/src/billing/: models.py
harness/example/src/db/: queries.py
harness/example/tests/: conftest.py
harness/tests/: test_contracts.py  test_git_blob.py  test_hardening.py  test_harness.py  test_okf.py  test_telemetry_env.py
scripts/hooks/: command_guard.py  contract_manifest.py  enforce_contract_binding.py  enforce_file_locks.py  forensic.py  journal.py  lock_policy.py  log_condenser.py  telemetry.py  validate_agents_ledger.py
src/billing/: routes.py
src/db/: queries.py
tests/: test_contracts.py  test_hardening.py  test_harness.py  test_payments.py  test_queries.py
