[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-harness"
version = "0.1.0"
description = "Policy-enforcing workflow harness that keeps LLM coding agents on rails."
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "pre-commit>=3.2",
]

[project.optional-dependencies]
dev = [
    "types-PyYAML>=6.0",
    "ruff==0.15.17",
    "mypy",
    "pytest",
]

[project.scripts]
agent-harness = "harness.agent_runner:main"
agent-ci-enforce = "harness.ci_enforce:main"

[tool.setuptools]
packages = ["harness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["harness", "harness/example/src/billing", "harness/example/src/db"]
explicit_package_bases = true
namespace_packages = true
warn_unused_ignores = false
exclude = ["harness/tests/", "harness/example/", "harness/__init__.py", "harness/__main__.py"]

[[tool.mypy.overrides]]
module = ["git", "git.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["harness/tests", "harness/example/tests"]
